<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_index"
            android:icon="@mipmap/ic_favorite"
            android:title="@string/navigation_index" />
        <item
            android:id="@+id/navigation_item_book"
            android:icon="@mipmap/ic_favorite"
            android:title="@string/navigation_book" />
        <item
            android:id="@+id/navigation_item_example"
            android:icon="@mipmap/ic_favorite"
            android:title="@string/navigation_example" />
        <item
            android:id="@+id/navigation_item_blog"
            android:icon="@mipmap/ic_favorite"
            android:title="@string/navigation_my_blog" />

        <item
            android:id="@+id/navigation_item_about"
            android:icon="@mipmap/ic_favorite"
            android:title="@string/navigation_about" />
        <item
            android:id="@+id/navigation_item_tuiku"
            android:icon="@mipmap/ic_favorite"
            android:title="@string/navigation_tuiku" />
    </group>
</menu>