<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.swings.night_sec.ActivityInfo">

    <include
        android:id="@+id/appbar"
        layout="@layout/include_toolbar" />

    <LinearLayout
        android:id="@+id/info_ll_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar"
        android:layout_margin="16dp"
        android:layout_above="@+id/info_ll_bottom"
        android:orientation="vertical">

        <com.example.swings.night_sec.ClearEditText
            android:id="@+id/info_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:drawableLeft="@mipmap/right"
            android:gravity="center"
            android:hint="@string/hint_info_info"
            android:singleLine="true" />

        <TextView
            android:textColor="#2a1120"
            android:textSize="16dp"
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/info_btn_back"
            android:layout_width="0dp"
            android:background="@drawable/btn_lightred_red"
            android:layout_marginRight="2dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_back" />

        <Button
            android:id="@+id/info_btn_ok"
            android:layout_width="0dp"
            android:layout_marginLeft="2dp"
            android:background="@drawable/btn_lightred_green"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_ok" />
    </LinearLayout>
</RelativeLayout>
